ipc/ipdl/test/ipdl/error/repeatedOutState.ipdl
protocol repeatedOutState {
child: Msg(); __delete__();

    // error: S2 repeated in multi-out set

state S1:
    send Msg goto S2 or S2 or S4;

state S2: send Msg goto S2;
state S3: send Msg goto S3;
state S4: send Mesg goto S4;  send __delete__;
};
